name:                upfind
version:             0.1.0.0
synopsis:            A program to search upwards for a file
description:         Please see README.md
homepage:            https://github.com/expipiplus1/upfind#readme
license:             BSD3
license-file:        LICENSE
author:              Joe Hermaszewski
maintainer:          finders.keepers@monoid.al
copyright:           2016 Joe Hermaszewski
category:            Shell
build-type:          Simple
extra-source-files:  default.nix shell.nix
cabal-version:       >=1.10

executable upfind
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , extra
                     , text
                     , turtle
                     , system-filepath
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/expipiplus1/upfind
